Initialize source textarea

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
     <title>Tatqan</title>
   </head>
   <body>
+    <textarea id="source" title="Source" dir="rtl"></textarea>
     <script src="tatqan.js"></script>
   </body>
 </html>
