--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
     <title>Tatqan</title>
   </head>
   <body>
+    <header><h1>T<span>aʕ</span style="color:grey">atqan</h1></header>
     <textarea id="source" title="Source" dir="rtl"></textarea>
     <script src="tatqan.js"></script>
   </body>
