Improve title style

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,13 @@
     <title>Tatqan</title>
   </head>
   <body>
-    <header><h1>T<span>aʕ</span style="color:grey">atqan</h1></header>
+    <header>
+      <h1>
+        T<span style="color: #b9b9b9; vertical-align: super; font-size: 0.8em"
+          >aʕ</span
+        >atqan
+      </h1>
+    </header>
     <textarea id="source" title="Source" dir="rtl"></textarea>
     <script src="tatqan.js"></script>
   </body>
