Improve title layout

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>
+      <h1 style="text-align: center; font-weight: bold; margin-bottom: 0.5em">
         T<span style="color: #b9b9b9; vertical-align: super; font-size: 0.8em"
           >aʕ</span
         >atqan
