--- a/static/index.html
+++ b/static/index.html
@@ -9,10 +9,25 @@
   </head>
   <body>
     <header>
-      <h1 style="text-align: center; font-weight: bold; margin-bottom: 0.5em">
-        T<span style="color: #b9b9b9; vertical-align: super; font-size: 0.8em"
-          >aʕ</span
-        >atqan
+      <h1
+        style="
+          font-weight: bold;
+          margin-bottom: 0.5em;
+          display: flex;
+          align-items: center;
+        "
+      >
+        <span style="flex: 1 1 0px">
+          T<span style="color: #b9b9b9; vertical-align: super; font-size: 0.8em"
+            >aʕ</span
+          >atqan
+        </span>
+        <span
+          dir="rtl"
+          style="flex: 1 1 0px; text-align: center; font-size: 2em"
+          >𐤕𐤏𐤕𐤒𐤍</span
+        >
+        <span dir="rtl" style="flex: 1 1 0px">תעתקן</span>
       </h1>
     </header>
     <textarea id="source" title="Source" dir="rtl"></textarea>
