Initialize virtual keyboard

--- a/static/index.html
+++ b/static/index.html
@@ -31,6 +31,7 @@
       </h1>
     </header>
     <textarea id="source" title="Source" dir="rtl"></textarea>
+    <virtual-keyboard id="vkb"></virtual-keyboard>
     <script src="tatqan.js"></script>
   </body>
 </html>
