--- a/static/index.html
+++ b/static/index.html
@@ -32,6 +32,7 @@
     </header>
     <textarea id="source" title="Source" dir="rtl"></textarea>
     <virtual-keyboard id="vkb"></virtual-keyboard>
+    <output id="output" dir="rtl"></output>
     <script src="tatqan.js"></script>
   </body>
 </html>
