--- a/static/index.html
+++ b/static/index.html
@@ -32,6 +32,7 @@
     <textarea id="source" title="Source" dir="rtl"></textarea>
     <virtual-keyboard id="vkb"></virtual-keyboard>
     <output id="output" dir="rtl"></output>
+    <button id="copyButton">Copy</button>
     <script src="tatqan.js"></script>
   </body>
 </html>
