--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="tatqan.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Rashi+Hebrew:wght@300&family=Noto+Sans+Phoenician&family=Noto+Sans+Display:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>Tatqan</title>
   </head>
   <body>
