--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Rashi+Hebrew:wght@300&family=Noto+Sans+Phoenician&family=Noto+Sans+Display:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>Tatqan</title>
+    <title>Tatqan (WIP)</title>
   </head>
   <body>
     <header>
