--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,18 @@
       rel="stylesheet"
     />
     <title>Tatqan (WIP)</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4DFH4R7YP9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-4DFH4R7YP9");
+    </script>
   </head>
   <body>
     <header>
