--- a/static/index.html
+++ b/static/index.html
@@ -47,10 +47,12 @@
         <span dir="rtl" style="flex: 1 1 0px">תעתקן</span>
       </h1>
     </header>
+    <section id="outputSection">
+      <output id="output" dir="rtl"></output>
+      <button id="copyButton">Copy</button>
+    </section>
     <textarea id="source" title="Source" dir="rtl"></textarea>
     <virtual-keyboard id="vkb"></virtual-keyboard>
-    <output id="output" dir="rtl"></output>
-    <button id="copyButton">Copy</button>
     <script src="tatqan.js"></script>
   </body>
 </html>
