Initialize conversion config

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,9 @@
     </header>
     <section id="outputSection">
       <output id="output" dir="rtl"></output>
+      <select id="targetScriptSelect">
+        <option>None</option>
+      </select>
       <button id="copyButton">Copy</button>
     </section>
     <textarea id="source" title="Source" dir="rtl"></textarea>
