Initialize diacritics removal

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,12 @@
       <select id="targetScriptSelect">
         <option>None</option>
       </select>
+      <span dir="rtl">
+        <label for="niqqudToggle">אָ</label
+        ><input type="checkbox" id="niqqudToggle" />
+        <label for="taamimToggle">א֝</label>
+        <input type="checkbox" id="taamimToggle" />
+      </span>
       <button id="copyButton">Copy</button>
     </section>
     <textarea id="source" title="Source" dir="rtl"></textarea>
