Extract diacritic input handling to convert

--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
       </select>
       <span dir="rtl">
         <label for="niqqudToggle">אָ</label
-        ><input type="checkbox" id="niqqudToggle" />
+        ><input type="checkbox" id="niqqudToggle" checked />
         <label for="taamimToggle">א֝</label>
-        <input type="checkbox" id="taamimToggle" />
+        <input type="checkbox" id="taamimToggle" checked />
       </span>
       <button id="copyButton">Copy</button>
     </section>
