--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,9 @@
       <select id="targetScriptSelect">
         <option>None</option>
       </select>
+      <select id="targetNumeralsSelect">
+        <option>None</option>
+      </select>
       <span dir="rtl">
         <label for="niqqudToggle">אָ</label
         ><input type="checkbox" id="niqqudToggle" checked />
